# truma-inetx-ble

./: .gitignore  README.md  progress.md  pyproject.toml
data/dbus-truma/: run
data/dbus-truma/service/: ble_transport.py  config.py  const.py  dbus_service.py  main.py  mqtt_ha.py  pairing.py  protocol.py  rest_api.py  truma_state.py
docs/: protocol.md  truma-inetx-protocol-reference.md
docs/plans/: 2024-12-13-truma-inetx-integration-design.md
scripts/: ble_bridge.py  ble_connect.py  ble_pair.py  ble_pair2.py  ble_pair_interactive.py  ble_sniffer.py  decode_truma.py  monitor_setpoint.py  parse_pklg.py  test_protocol.py  truma_control.py  truma_dbus.py  truma_test.swift
src/lin/: __init__.py  adapter.py  frame.py  lintest_adapter.py  sniffer.py
src/truma/: controller.py  decoder.py
tests/: test_frame.py
tools/: raw_logger.py
